Implementada funcionalidade 'validaCampos()'

--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
                         <th scope="row">Português</th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-pt">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-pt">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-pt">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-pt">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-pt">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-pt">
                             </div>
                         </td>
                         <td>
@@ -122,12 +122,12 @@
                         <th scope="row">Filosofia</th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-fil">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-fil">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-fil">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-fil">
                             </div>
                         </td>
                         <td>
@@ -150,12 +150,12 @@
                         <th scope="row">L. Estrangeira</th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-le">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-le">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-le">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-le">
                             </div>
                         </td>
                         <td>
@@ -178,17 +178,17 @@
                         <th scope="row">Matemática</th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-mat">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-mat">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-mat">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-mat">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-mat">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-mat">
                             </div>
                         </td>
                         <td>
@@ -202,17 +202,17 @@
                         <th scope="row">E. Física</th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-ef">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-ef">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-ef">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-ef">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-ef">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-ef">
                             </div>
                         </td>
                         <td></td>
@@ -230,12 +230,12 @@
                         </th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-bienal1">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-bienal1">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-bienal1">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-bienal1">
                             </div>
                         </td>
                         <td>
@@ -267,12 +267,12 @@
                         </th>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-bienal2">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-bienal2">
                             </div>
                         </td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-bienal2">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-bienal2">
                             </div>
                         </td>
                         <td>
@@ -308,7 +308,7 @@
                         <td></td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-op1">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-op1">
                             </div>
                         </td>
                         <td></td>
@@ -337,7 +337,7 @@
                         <td></td>
                         <td>
                             <div class="col-8">
-                                <input class="form-control" type="number" value="0" min="0" max="20" id="nota-op2">
+                                <input class="form-control notasCIF" type="number" value="0" min="0" max="20" id="nota-op2">
                             </div>
                         </td>
                         <td></td>
@@ -350,8 +350,7 @@
     <div id="buttonsContent">
         <div class="button">
             <!--Botão-->
-            <button id="btnCalcular" type="button" class="btn btn-lg" data-toggle="modal"
-                data-target="#myModal"><i class="fa fa-calculator fa-lg"></i> Calcular</button>
+            <button id="btnCalcular" type="button" class="btn btn-lg"><i class="fa fa-calculator fa-lg"></i> Calcular</button>
         </div>
         <div class="button">
             <!--Botão-->
@@ -413,11 +412,19 @@
             var $spanNotaCandidatura = document.querySelector("#notaCandidatura");
             var notaMatA = document.querySelector("#nota-exame-mat").value;
 
-            var mediaFinal = (calcularMediaFinal()).toFixed(2);
-            var notaCandidatura = ((mediaFinal * 0.65) + ((notaMatA / 10) * 0.35)).toFixed(2);
+            if (validaCampos() === true){
+                var mediaFinal = (calcularMediaFinal()).toFixed(2);
+                var notaCandidatura = ((mediaFinal * 0.65) + ((notaMatA / 10) * 0.35)).toFixed(2);
 
-            $spanMediaFinal.textContent = mediaFinal;
-            $spanNotaCandidatura.textContent = notaCandidatura;
+                $spanMediaFinal.textContent = mediaFinal;
+                $spanNotaCandidatura.textContent = notaCandidatura;
+
+                // Open modal with results
+                $('#myModal').modal();    
+            } else {
+                // Sai da função
+                return;
+            }          
         });
 
         // Ação Botão Limpar
@@ -425,6 +432,16 @@
 
         $btnLimpar.addEventListener('click', function(){
             limpaCampos();
+        });
+
+        // Ação Input Number Fields
+        var $inputNumberFields = document.querySelectorAll(".form-control");
+
+        $inputNumberFields.forEach(function(input){
+            input.addEventListener('input', function(){
+                // Remover cor de background quando há input de dados
+                input.style.backgroundColor = "";
+            });
         });
      
         /**
@@ -580,6 +597,51 @@
             document.querySelector("#nota-exame-le").readOnly = true;
             document.querySelector("#nota-exame-bienal1").readOnly = true;
             document.querySelector("#nota-exame-bienal2").readOnly = true;
+
+            // Another way to the same 
+            //var $inputsExams = document.querySelectorAll("[id^='nota-exame']");
+            //The selector means: get an element where the attribute [id] begins with the string "nota-exame".
+            // ^ matches the start
+            // * matches any position
+            // $ matches the end
+            // $inputsExams.forEach(function(input){
+            //   input.readOnly = true;
+            // });
+        }
+
+        /**
+         * Se o valor dos campos for negativo ou superior a 20, lança mensagem de alerta
+         * @return true se os campos estiverem validados
+         * @return false se os campos não estiverem validados
+         */
+        function validaCampos(){
+            var validados = true; 
+
+            var notasExames = document.querySelectorAll("[id^='nota-exame']");
+
+            notasExames.forEach(function (nota){
+                if (nota.value < 0 || nota.value > 200){
+                    // definir background avermelhado
+                    nota.style.backgroundColor = "rgba(165, 42, 42, 0.473)";
+                    // mensagem
+                    alert("Deve inserir valores entre 0 e 200 na nota do exame nacional!");
+                    validados = false;
+                }
+            });
+
+            var notasCIF = document.querySelectorAll(".notasCIF");
+
+            notasCIF.forEach(function(nota){
+                if (nota.value < 0 || nota.value > 20){
+                    // definir background avermelhado
+                    nota.style.backgroundColor = "rgba(165, 42, 42, 0.473)";
+                    // mensagem
+                    alert("Deve inserir valores entre 0 e 20 na nota interna da disciplina!");
+                    validados = false;
+                }
+            });
+
+            return validados;
         }
 
     </script>
